# LocalNotes

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
scripts/: ensure-icons.js
src/: App.tsx  AppContext.tsx  api.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs
src-tauri/tests/: storage_tests.rs
src/components/: AIAssistantPanel.tsx  CommandPalette.tsx  Editor.tsx  Inspector.tsx  Sidebar.test.tsx  Sidebar.tsx  SyncBackup.tsx  TemplatesModal.tsx  VersionHistoryModal.tsx
